Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-5580

Accessing Attached properties in PropertyAction doesn't work

    XMLWordPrintable

Details

    • a6f90ca4d73365d37bdc4eaf8fe15cf55fe1bf83

    Description

      This code produces the following error

      ListView.onRemove: SequentialAnimation {
      PropertyAction

      { target: wrapper; property: "ListView.delayRemove"; value: true }

      NumberAnimation { target: wrapper; property: "scale"; to: 0; duration: 250; easing: "easeInOut
      PropertyAction

      { target: wrapper; property: "ListView.delayRemove"; value: false }

      }

      QWARN : tst_QmlGraphicsListView::qListModelInterface_inserted() QML QmlPropertyAction (file:///home/martjone/depot/qt/kinetic/tests/auto/declarative/qmlgraphicslistview/data/listview.qml:67:21) Cannot animate non-existant property "ListView.delayRemove"

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            brasser Michael Brasser (closed Nokia identity) (Inactive)
            martjone Martin Jones (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes