Support attached properties in QmlMetaProperty

QTBUG-5580